Added voteable scripts

--- a/botc/index.html
+++ b/botc/index.html
@@ -12,12 +12,24 @@
     
     <!-- ? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.png?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ? -->
     
+    <h2>Voteable Scripts</h2>
+    <ul>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/immortal_dance_party/immortal_dance_party.png?raw=true">Immortal Dance Party <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/Nathan3-14/botc/blob/main/scripts/tim_curry's_non-fiction_transylvanian_experience/tim_curry's_non-fiction_transylvanian_experience.png?raw=true">Tim Curry's non-fiction Transylvanian Experience <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/outed_evil/outed_evil.png?raw=true">Outed Evil <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_minotaurs_labyrinth/the_minotaurs_labyrinth.png?raw=true">The Minotaur's Labyrinth <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/idiot_sauce/idiot_sauce.png?raw=true">(COMPLEX) Idiot Sauce <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confused_nomination/confused_nomination.png?raw=true">(COMPLEX) Confused Nomination <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/storyteller's_nightmare/storyteller's_nightmare.png?raw=true">(COMPLEX) Storyteller's Nightmare <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/clocktower_the_on_blood/clocktower_the_on_blood.png?raw=true">(COMPLEX) Clocktower the on Blood <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+    </ul>
+
     <h2>Printed Scripts</h2>
     <ul>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.png?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/bad_moon_rising/bad_moon_rising.png?raw=true">Bad Moon Rising <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sects_and_violets/sects_and_violets.png?raw=true">Sects and Violets <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/pies_baking/pies_baking.png=true">Pies Baking <i class="fa-solid fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/pies_baking/pies_baking.png?raw=true">Pies Baking <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confusion/confusion.png?raw=true">Confusion <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/everyone_can_play/everyone_can_play.png?raw=true">Everyone can Play <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/insomnia/insomnia.png?raw=true">Insomnia <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
