Changed voteable scripts

--- a/botc/index.html
+++ b/botc/index.html
@@ -18,10 +18,10 @@
         <li><a target="_blank" href="https://github.com/Nathan3-14/botc/blob/main/scripts/tim_curry's_non-fiction_transylvanian_experience/tim_curry's_non-fiction_transylvanian_experience.png?raw=true">Tim Curry's non-fiction Transylvanian Experience <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/outed_evil/outed_evil.png?raw=true">Outed Evil <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_minotaurs_labyrinth/the_minotaurs_labyrinth.png?raw=true">The Minotaur's Labyrinth <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_baron_is_here/the_baron_is_here.png?raw=true">The Baron is Here <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/who_am_i_/who_am_i_.png?raw=true">Who am I? <i class="fa-solid fa-up-right-from-square"></i></a> <span style="color: grey">Includes the <a style="color: lightgrey" href="https://wiki.bloodontheclocktower.com/Tor"><u>Tor Loric</u></a></span></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/idiot_sauce/idiot_sauce.png?raw=true">(COMPLEX) Idiot Sauce <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/confused_nomination/confused_nomination.png?raw=true">(COMPLEX) Confused Nomination <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/storyteller's_nightmare/storyteller's_nightmare.png?raw=true">(COMPLEX) Storyteller's Nightmare <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/clocktower_the_on_blood/clocktower_the_on_blood.png?raw=true">(COMPLEX) Clocktower the on Blood <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
     </ul>
 
     <h2>Printed Scripts</h2>
@@ -54,7 +54,7 @@
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/immortal_dance_party/immortal_dance_party.png?raw=true">Immortal Dance Party <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/lunar_eclipse_v1.6/lunar_eclipse_v1.6.png?raw=true">Lunar Eclipse V1.6 <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/outed_evil/outed_evil.png?raw=true">Outed Evil <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/royal_institue_of_tyranny/royal_institue_of_tyranny.png?raw=true">Royal Institute of Tyranny <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
+        <li><a target="_blank" href="https://github.com/Nathan3-14/botc/blob/main/scripts/royal_institute_of_tyranny/royal_institute_of_tyranny.png?raw=true">Royal Institute of Tyranny <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sainsbury's_taste_the_difference_riot/sainsbury's_taste_the_difference_riot.png?raw=true">Sainsbury's Taste the Difference Riot <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/teensy_brewing/teensy_brewing.png?raw=true">Teensy Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_baron_is_here/the_baron_is_here.png?raw=true">The Baron is Here <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
