--- a/botc/index.html
+++ b/botc/index.html
@@ -24,8 +24,9 @@
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/storyteller's_nightmare/storyteller's_nightmare.png?raw=true">(COMPLEX) Storyteller's Nightmare <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
     </ul>
 
-    <h2>Printed Scripts</h2>
+    <h2>Other Scripts</h2>
     <ul>
+        <!--? Printed ?-->
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.png?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/bad_moon_rising/bad_moon_rising.png?raw=true">Bad Moon Rising <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sects_and_violets/sects_and_violets.png?raw=true">Sects and Violets <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
@@ -42,9 +43,7 @@
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/storyteller's_nightmare/storyteller's_nightmare.png?raw=true">Storyteller's Nightmare <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/irrational_behaviour/irrational_behaviour.png?raw=true">Irrational Behaviour <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/Nathan3-14/botc/blob/main/scripts/tim_curry's_non-fiction_transylvanian_experience/tim_curry's_non-fiction_transylvanian_experience.png?raw=true">Tim Curry's non-fiction Transylvanian Experience <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-    </ul>
-    <h2>Other Scripts</h2>
-    <ul>
+        <!--? Not Printed ?-->
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/circle_of_trust/circle_of_trust.png?raw=true">Circle of Trust <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/clocktower_the_on_blood/clocktower_the_on_blood.png?raw=true">Clocktower the on Blood <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/do_we_have_any_outsiders_/do_we_have_any_outsiders_.png?raw=true">Do we have any Outsiders? <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
