--- a/botc/index.html
+++ b/botc/index.html
@@ -13,6 +13,7 @@
     <!-- ? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.png?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ? -->
     
     <h2>Voteable Scripts</h2>
+    <a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.png?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a>
     <ul>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/immortal_dance_party/immortal_dance_party.png?raw=true">Immortal Dance Party <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/Nathan3-14/botc/blob/main/scripts/tim_curry's_non-fiction_transylvanian_experience/tim_curry's_non-fiction_transylvanian_experience.png?raw=true">Tim Curry's non-fiction Transylvanian Experience <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
@@ -20,6 +21,7 @@
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_minotaurs_labyrinth/the_minotaurs_labyrinth.png?raw=true">The Minotaur's Labyrinth <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/the_baron_is_here/the_baron_is_here.png?raw=true">The Baron is Here <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/who_am_i_/who_am_i_.png?raw=true">Who am I? <i class="fa-solid fa-up-right-from-square"></i></a> <span style="color: grey">Includes the <a style="color: lightgrey" href="https://wiki.bloodontheclocktower.com/Tor"><u>Tor Loric</u></a></span></li>
+        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/sects_and_violets/sects_and_violets.png?raw=true">Sects and Violets <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/idiot_sauce/idiot_sauce.png?raw=true">(COMPLEX) Idiot Sauce <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/storyteller's_nightmare/storyteller's_nightmare.png?raw=true">(COMPLEX) Storyteller's Nightmare <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
     </ul>
