Removed selected scripts header

--- a/botc/index.html
+++ b/botc/index.html
@@ -12,14 +12,7 @@
     
     <!-- ? <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/#/#.png?raw=true"># <i class="fa-solid fa-up-right-from-square"></i></a></li> ? -->
     
-    <h2>Selected Scripts</h2>
-    <ul>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.png?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/Nathan3-14/botc/blob/main/scripts/tim_curry's_non-fiction_transylvanian_experience/tim_curry's_non-fiction_transylvanian_experience.png?raw=true">Tim Curry's non-fiction Transylvanian Experience <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
-        <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/who_am_i_/who_am_i_.png?raw=true">Who am I? <i class="fa-solid fa-up-right-from-square"></i></a> <span style="color: grey">Includes the <a style="color: lightgrey" href="https://wiki.bloodontheclocktower.com/Tor"><u>Tor Loric</u></a></span></li>
-    </ul>
-
-    <h2>Other Scripts</h2>
+    <h2>Scripts</h2>
     <ul>
         <!--? Printed ?-->
         <li><a target="_blank" href="https://github.com/nathan3-14/botc/blob/main/scripts/trouble_brewing/trouble_brewing.png?raw=true">Trouble Brewing <i class="fa-solid fa-xs fa-up-right-from-square"></i></a></li>
